# e2b_hackathon

./: .env.example  .gitignore  README.md  e2b.Dockerfile  e2b.toml  prompt.md  pyproject.toml
src/backend/: main.py  scraper.py  site_to_markdown.py
src/frontend/: package-lock.json  package.json
src/frontend/public/: index.html
src/frontend/src/: App.css  App.js  index.css
src/frontend/src/components/: InputForm.css  InputForm.js
src/react_engineer/: engineer.py
templates/: feedback_prompt.txt  iteration_prompt.txt  system_prompt.txt
